# usage

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  CLAUDE.md  NOTICE.md  README.en.md  README.md  burn_rate.py  claude_app_rate_loader.py  i18n.json  login_item.py  menubar.py  pyproject.toml  setup_app.py  usage_client.py  usage_statusline.py
.github/workflows/: release.yml
assets/panels/: aquarium.html  black_hole.html  classic.html  cloud_observation.html  matrix.html  newspaper.html  prism_arcade.html  win95.html  world_cup.html
panels/: __init__.py  base.py  web_panel.py
scripts/: build_pkg.sh  com.lollapalooza.usage.plist  install-desktop-deriver.sh  install-github-release.sh  install-hook.sh  install-launchagent.sh  uninstall-desktop-deriver.sh  uninstall-launchagent.sh  usage-claude-desktop-deriver.py
tests/: test_burn_rate.py  test_claude_app_rate_loader.py  test_codex_loader.py  test_history_loader.py  test_login_item.py  test_menubar.py  test_panels.py  test_pricing.py  test_usage_client.py  test_usage_statusline.py
